# gRPC-microservices-poc

./: .gitignore
rust-inventory-service/: Cargo.toml  README.md  build.rs
rust-inventory-service/proto/: order_inventory.proto
rust-inventory-service/src/: main.rs
spring-boot-orderservice/: README.md  build.gradle
spring-boot-orderservice/src/main/java/com/grpc/orderservice/: SpringBootOrderserviceApplication.java
spring-boot-orderservice/src/main/java/com/grpc/orderservice/config/: GRPCClientConfig.java
spring-boot-orderservice/src/main/java/com/grpc/orderservice/controllers/: OrderController.java
spring-boot-orderservice/src/main/java/com/grpc/orderservice/dto/: OrderRequest.java
spring-boot-orderservice/src/main/resources/: application.yaml
