[package]
name = "inventory_service"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.9"
tokio = { version = "1.29", features = ["rt-multi-thread", "macros"] }
prost = "0.11"
prost-types = "0.11"
bytes = "1.6"

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"


